# clangd-mcp

./: CONTEXT.md  README.md  install-gemini.sh  lsp_client.py  main.py  pyproject.toml  server.py  tests.py
