[project]
name = "clangd-mcp"
version = "0.1.0"
description = "MCP server bridging Claude to clangd"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
clangd-mcp = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "lsp_client"]
